# ResearchAndVulkan

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
doc/note/: ImageViews.md  Instance.md  LocalDeviceAndQueues.md  ValidationLayer.md  main.md
doc/note/chapters/: BasicStructure.md  CombinedImageSampler.md  Commandbuffers.md  DepthBuffering.md  DescriptorLayoutAndBuffer.md  DescriptorPoolAndSets.md  FixedFunctions.md  Framebuffers.md  FramesInFlight.md  GeneratingMipmaps.md  ImageViewAndSampler.md  ImageViews.md  Images.md  IndexBuffer.md  Introduction.md  LoadingModels.md  LogicalDeviceAndQueues.md  Multisampling.md  PhysicalDevicesAndQueueFamilies.md  PipelineConclusion.md  RenderPasses.md  RenderingAndPresentation.md  ShaderModules.md  StagingBuffer.md  Swapchain.md  SwapchainRecreation.md  ValidationLayer.md  VertexBufferCreation.md  VertexInputDescription.md  WindowSurface.md
include/render/: render.h
src/render/: render.cpp
src/shaders/: shader.frag  shader.vert  vert.spv
